@@ -1,3 +1,4 @@
+* BUG#6366 Ajout d'un contrôle sur la date de naissance d'un tiers
 * FEA6130 Amélioration du sigle "REFLEX" en utilisant le champ actif/inactif sur les adresses
 
 Version 1.12 - 2017-04-28
