@@ -1,3 +1,4 @@
+* BUG#6366 Add control on party birth date 
 * FEA#6310 Improve the return to sender flag using active/inactive field on addresses
 
 Version 1.12 - 2017-04-28
